add gestion panne et equipment

--- a/equipment-management-frontend/src/app/user-dashboard/user-dashboard.component.html
+++ b/equipment-management-frontend/src/app/user-dashboard/user-dashboard.component.html
@@ -1,1 +1,8 @@
 <p>user-dashboard works!</p>
+
+<nav>
+  <ul>
+    <!-- Autres liens de navigation -->
+    <li><a routerLink="/historique-pannes">Historique des Pannes</a></li>
+  </ul>
+</nav>
