--- a/equipment-management-frontend/src/app/technician-dashboard/technician-dashboard.component.html
+++ b/equipment-management-frontend/src/app/technician-dashboard/technician-dashboard.component.html
@@ -1,1 +1,3 @@
-<p>technician-dashboard works!</p>
+<p>technician-dashboard works!</p><p>Technician Dashboard works!</p>
+<app-technicien-tickets></app-technicien-tickets>
+
