add list ticket by user

--- a/equipment-management-frontend/src/app/user-dashboard/user-dashboard.component.html
+++ b/equipment-management-frontend/src/app/user-dashboard/user-dashboard.component.html
@@ -17,5 +17,28 @@
   <p><strong>id:</strong> {{ user.id }}</p>
   <p><strong>Email:</strong> {{ user.email }}</p>
   <p><strong>Rôle:</strong> {{ user.role }}</p>
-  <!-- Ajouter d'autres informations de profil si nécessaire -->
+</div>
+<div *ngIf="user">
+  <h2>Bienvenue, {{ user.nom }}</h2>
+  <h3>Vos Tickets</h3>
+  <table>
+    <thead>
+    <tr>
+      <th>ID</th>
+      <th>Description</th>
+      <th>État</th>
+      <th>Panne ID</th>
+      <th>Technicien ID</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let ticket of tickets">
+      <td>{{ ticket.id }}</td>
+      <td>{{ ticket.description }}</td>
+      <td>{{ ticket.etatTicket }}</td>
+      <td>{{ ticket.panneId}}</td>
+      <td>{{ ticket.technicienId }}</td>
+    </tr>
+    </tbody>
+  </table>
 </div>
