--- a/equipment-management-frontend/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/equipment-management-frontend/src/app/admin-dashboard/admin-dashboard.component.html
@@ -1,4 +1,7 @@
 <p>admin-dashboard works!</p>
+<nav>
+  <a routerLink="/pannes/new">Créer un Ticket</a>
+</nav>
 <app-equipment-list></app-equipment-list>
 <app-admin-tickets>
 </app-admin-tickets>
