--- a/equipment-management-frontend/src/app/EquipmentC/equipment-list/equipment-list.component.html
+++ b/equipment-management-frontend/src/app/EquipmentC/equipment-list/equipment-list.component.html
@@ -1,17 +1,17 @@
-<p>equipment-list works!</p>
 <div>
   <h2>Equipments</h2>
+  <a routerLink="new" class="add-button">
+    <i class="fas fa-plus"></i> Add New Equipment
+  </a>
   <div>
     <input [(ngModel)]="searchTerm" (input)="search()" placeholder="Search by name" />
   </div>
-
-
 
   <div></div>
   <table>
     <thead>
     <tr>
-      <th> id</th>
+      <th>id</th>
       <th>Nom</th>
       <th>Type</th>
       <th>Etat</th>
@@ -20,18 +20,21 @@
     </thead>
     <tbody>
     <tr *ngFor="let equipment of equipments">
-      <td> {{equipment.id}}</td>
+      <td>{{ equipment.id }}</td>
       <td>{{ equipment.nom }}</td>
       <td>{{ equipment.type }}</td>
       <td>{{ equipment.etatEquipement }}</td>
       <td>
-        <!-- equipment-list.component.html -->
-        <button (click)="deleteEquipment(equipment.id)">Delete</button>
-        <a [routerLink]="['/equipments/edit', equipment.id]">Edit</a>
+        <!-- Use Font Awesome icons for actions -->
+        <button (click)="deleteEquipment(equipment.id)">
+          <i class="fas fa-trash-alt"></i> Delete
+        </button>
+        <a [routerLink]="['edit', equipment.id]">
+          <i class="fas fa-edit"></i> Edit
+        </a>
       </td>
     </tr>
     </tbody>
   </table>
-  <a routerLink="/equipments/new">Add New Equipment</a>
-</div>
 
+</div>
