--- a/equipment-management-frontend/src/app/PanneC/panne-form/panne-form.component.html
+++ b/equipment-management-frontend/src/app/PanneC/panne-form/panne-form.component.html
@@ -49,7 +49,7 @@
 
     <div class="form-group">
       <button type="submit" class="btn btn-primary">{{ isEditing ? 'Update' : 'Report' }}</button>
-      <button type="button" class="btn btn-secondary" [routerLink]="['/pannes']">Cancel</button>
+      <button type="button" class="btn btn-secondary" [routerLink]="['admin/pannes']">Cancel</button>
     </div>
   </form>
 </div>
