--- a/equipment-management-frontend/src/app/PanneC/panne-form/panne-form.component.html
+++ b/equipment-management-frontend/src/app/PanneC/panne-form/panne-form.component.html
@@ -1,34 +1,36 @@
 <div class="panne-form-container">
   <h2>{{ isEditing ? 'Edit Panne' : 'Report Panne' }}</h2>
   <form (ngSubmit)="savePanne()">
-    <div class="form-group">
-      <label for="description">Description</label>
-      <input
-        type="text"
-        id="description"
-        [(ngModel)]="panne.description"
-        name="description"
-        class="form-control"
-        required
-      />
+    <div class="form-group-row">
+      <div class="form-group animated fadeIn">
+        <label for="description">Description</label>
+        <input
+          type="text"
+          id="description"
+          [(ngModel)]="panne.description"
+          name="description"
+          class="form-control"
+          required
+        />
+      </div>
+
+      <div class="form-group animated fadeIn delay-1s">
+        <label for="etatPanne">État Panne</label>
+        <select
+          id="etatPanne"
+          [(ngModel)]="panne.etatPanne"
+          name="etatPanne"
+          class="form-control"
+          required
+        >
+          <option *ngFor="let etat of etatPanneEnum | keyvalue" [value]="etat.key">
+            {{ etat.value }}
+          </option>
+        </select>
+      </div>
     </div>
 
-    <div class="form-group">
-      <label for="etatPanne">État Panne</label>
-      <select
-        id="etatPanne"
-        [(ngModel)]="panne.etatPanne"
-        name="etatPanne"
-        class="form-control"
-        required
-      >
-        <option *ngFor="let etat of etatPanneEnum | keyvalue" [value]="etat.key">
-          {{ etat.value }}
-        </option>
-      </select>
-    </div>
-
-    <div class="form-group">
+    <div class="form-group animated fadeIn delay-2s">
       <label>Sélectionnez des équipements</label>
       <div *ngFor="let equipment of equipments">
         <input
@@ -42,13 +44,10 @@
       </div>
     </div>
 
-
-
-
-
-
-    <div class="form-group">
-      <button type="submit" class="btn btn-primary">{{ isEditing ? 'Update' : 'Report' }}</button>
+    <div class="form-group button-group animated fadeIn delay-3s">
+      <button type="submit" class="btn btn-primary">
+        {{ isEditing ? 'Update' : 'Report' }}
+      </button>
       <button type="button" class="btn btn-secondary" [routerLink]="['admin/pannes']">Cancel</button>
     </div>
   </form>
