--- a/equipment-management-frontend/src/app/admin-users/admin-users.component.html
+++ b/equipment-management-frontend/src/app/admin-users/admin-users.component.html
@@ -1,7 +1,10 @@
-<p>admin-users works!</p>
-<div class="admin-users">
-  <h2>Gestion des Utilisateurs</h2>
-  <table mat-table [dataSource]="users" class="mat-elevation-z8">
+<div class="admin-users-container">
+  <a routerLink="register" class="add-button">
+    <i class="fas fa-plus"></i> Add New user
+  </a>
+  <h2>Gestion des Personnes</h2>
+
+  <table mat-table [dataSource]="users" class="admin-users-table mat-elevation-z8">
 
     <!-- ID Column -->
     <ng-container matColumnDef="id">
@@ -31,10 +34,10 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef> Actions </th>
       <td mat-cell *matCellDef="let user">
-        <button mat-button (click)="editUser(user)">Modifier</button>
-        <button mat-button color="warn" (click)="deleteUser(user.id)">Supprimer</button>
+        <button mat-button class="delete-button" color="warn" (click)="deleteUser(user.id)">Supprimer</button>
       </td>
     </ng-container>
+
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
